Replaced three.js with paper.js. Uses paper.js to check for overlaps and prevents player from placing shapes/coordinates when an overlap would occur.

--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -1,3 +1,10 @@
+#window {
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+}
+
 #gamelobby {
     width: 100%;
     height: 100%;
@@ -102,4 +109,11 @@
 @font-face {
     font-family: "rainfall";
     src: url('../css/fonts/RAINFALL.otf');
+}
+
+.gamewindow {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
 }
